Added comments to nouns.ipynb file, updated gitignore

--- a/analysis/nouns.ipynb
+++ b/analysis/nouns.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "data['words'] = word_list\n",
-    "data = data.explode('words')"
+    "data = data.explode('words') #splits into different rows"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[['word', 'pos']] = pd.DataFrame(data['words'].tolist(), index=data.index)"
+    "data[['word', 'pos']] = pd.DataFrame(data['words'].tolist(), index=data.index) #splits into cols"
    ]
   },
   {
